@@ -1,7 +1,11 @@
 #ifndef _BASETSD_H
 #define _BASETSD_H
 
-#include <_mingw.h>  /* for definition of __int64 */
+#ifdef __GNUC__
+#ifndef __int64
+#define __int64 long long
+#endif
+#endif
 
 #if defined(_WIN64)
 #define __int3264   __int64
